--- a/src/components/character/character.scss
+++ b/src/components/character/character.scss
@@ -4,9 +4,17 @@
   text-align: left;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
+  overflow: hidden; // Added to prevent image overflow during zoom
 
   &:not(:last-child) {
     margin-bottom: 30px;
+  }
+
+  &:hover {
+    img {
+      transform: scale(1.1);
+    }
   }
 
   h2 {
@@ -19,9 +27,9 @@
     width: 100%;
     object-fit: cover;
     height: 200px;
+    transition: transform 0.3s ease;
   }
 }
-
 .character-details {
   padding: 20px;
 }
