--- a/src/components/character/character.scss
+++ b/src/components/character/character.scss
@@ -31,7 +31,7 @@
   }
 }
 .character-details {
-  padding: 20px;
+  padding: 1.5rem;
 }
 
 .status-dot {
@@ -57,7 +57,7 @@
 }
 
 .character-info {
-  margin-top: 25px;
+  margin-top: 1.5rem;
 
   span {
     font-weight: bold;
