--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #272b33;
   color: #fff;
+  margin: 2rem;
 }
 
 code {
@@ -14,6 +20,7 @@ code {
     monospace;
 }
 
+h1,
 h2 {
   margin: 0;
 }
