--- a/src/components/character/character.scss
+++ b/src/components/character/character.scss
@@ -1,3 +1,5 @@
+@import '../../styles/main.scss';
+
 .character-card {
   border-radius: 0.5rem;
   background-color: #3c3e44;
@@ -6,10 +8,8 @@
   flex-direction: column;
   cursor: pointer;
   overflow: hidden;
-  opacity: 0;
-  transform: translateY(10px);
-  animation: fadeIn 0.5s ease forwards;
   margin-bottom: 30px;
+  @include fadeInAnimation;
 
   &:hover {
     img {
@@ -70,12 +70,5 @@
     font-weight: bold;
     font-size: 0.9rem;
     color: rgb(158, 158, 158);
-  }
-}
-
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
