--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -11,7 +11,15 @@
 }
 
 .details {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
   @include fadeInAnimation;
+
+  .bold {
+    font-weight: bold;
+    color: #8d8d8d;
+  }
 }
 
 .image-container {
@@ -26,4 +34,36 @@
 
 .not-found {
   text-align: center;
+}
+
+.first-episode {
+  .title {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+  }
+
+  h3 {
+    text-align: center;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .bottom-info {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    justify-content: space-evenly;
+
+    @media (max-width: 400px) {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 1rem;
+    }
+    > div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+  }
 }
