--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -15,11 +15,6 @@
   margin-left: auto;
   margin-right: auto;
   @include fadeInAnimation;
-
-  .bold {
-    font-weight: bold;
-    color: #8d8d8d;
-  }
 }
 
 .image-container {
@@ -39,7 +34,8 @@
 .first-episode {
   .title {
     margin-top: 1rem;
-    margin-bottom: 0.5rem;
+    font-weight: bold;
+    color: rgb(158, 158, 158);
   }
 
   h3 {
@@ -52,6 +48,7 @@
     display: flex;
     flex-direction: row;
     gap: 1.5rem;
+    margin-top: 0.5rem;
     justify-content: space-evenly;
 
     @media (max-width: 400px) {
@@ -59,11 +56,31 @@
       align-items: stretch;
       gap: 1rem;
     }
+
     > div {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
     }
+
+    .character-info {
+      margin-top: 0;
+    }
   }
+}
+
+.go-back {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  border: none;
+  width: 2rem;
+  height: 2rem;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
 }
