--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -4,10 +4,20 @@
   padding: 0.5rem;
   margin-top: 1rem;
   outline: none;
+  background-color: #3c3e44;
+  color: #fff;
+
+  &::placeholder {
+    color: #fff;
+  }
+
+  &::-webkit-search-cancel-button {
+    cursor: pointer;
+    filter: invert(100%) sepia(100%) saturate(500%) hue-rotate(90deg);
+  }
 }
 
 .filter {
-  color: rgb(235, 217, 217);
   display: flex;
   gap: 1rem;
   margin-top: 1rem;
