--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -82,5 +82,8 @@
   height: 2rem;
   font-size: 20px;
   cursor: pointer;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
+
+  @supports not (-o-appearance: none) {
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
+  }
 }
