--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -14,6 +14,7 @@
   &::-webkit-search-cancel-button {
     cursor: pointer;
     filter: invert(100%) sepia(100%) saturate(500%) hue-rotate(90deg);
+    font-size: 20px;
   }
 }
 
@@ -27,6 +28,7 @@
   font-weight: bold;
   cursor: pointer;
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
 
   .status-dot {
     width: 20px;
@@ -35,15 +37,14 @@
     vertical-align: middle;
     -webkit-tap-highlight-color: transparent;
     outline: none;
+    border: 2px solid transparent;
 
     &:not(:last-child) {
       margin-right: 0.5rem;
     }
 
     &.active {
-      @supports not (-o-appearance: none) {
-        box-shadow: 0 0 5px yellow;
-      }
+      border-color: orange;
     }
   }
 }
